# TempData2.0

./: CMakeLists.txt  Data.cpp  Data.h  DebugMacros.h  HTTPSRedirect.cpp  HTTPSRedirect.h  Music.cpp  Music.h  README.md  Rangefinder.cpp  Rangefinder.h  Rfid.cpp  Rfid.h  TempData.ino  WifiSetup.cpp  WifiSetup.h  wiring.h
